[project]
name = "archivage"
version = "0.1.0"
description = "Archive Twitter timelines to JSONL.gz"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.3.1",
    "telethon>=1.36",
    "trafilatura>=2.0",
    "lxml>=5.0",
]

[project.scripts]
archivage = "archivage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archivage"]
